<resources>
    <string name="app_name">MedicalClinic</string>
    <string name="patient_sign_up">Patient Sign Up</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="date_of_birth_format">MM/DD/YYYY</string>
    <string name="create_password">Create a password</string>
    <string name="create_username">Create a username</string>
    <string name="name_format">Full Name</string>
    <string name="sign_up_description">To create an account, please fill in all the information below.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome">WELCOME</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="log_out">LOG OUT</string>
    <string name="book">BOOK</string>
    <string name="refresh">REFRESH</string>
    <string name="doctors">DOCTORS</string>
    <string name="previous_doctors">Previous Doctors Visited</string>
    <string name="availability_format">MM-DD-YYYY HH:MM:SS</string>
    <string name="delete_confirmation">Are you sure?</string>
    <string name="delete_dialog">After deleting your account, all your data will be deleted and cannot be restored.</string>
    <string name="delete_yes">Yes, delete my account</string>
    <string name="delete_no">No, please dismiss</string>
    <string name="doctor_sign_up">Doctor Sign Up</string>
    <string name="specialization">Specialization(s)</string>
    <string name="select">Select</string>
    <string name="select_specialization">Select Specialization(s)</string>
    <string name="select_specialization_description">Before creating an account. Please select your specialization(s).</string>
    <string name="confirm">Confirm</string>
    <string name="allergy_immunology">Allergy and Immunology</string>
    <string name="anesthesiology">Anesthesiology</string>
    <string name="cardiology">Cardiology</string>
    <string name="emergency_medicine">Emergency Medicine</string>
    <string name="endocrinology_metabolism">Endocrinology and Metabolism</string>
    <string name="dermatology">Dermatology</string>
    <string name="family_medicine">Family Medicine</string>
    <string name="gastroenterology">Gastroenterology</string>
    <string name="geriatric_medicine">Geriatric Medicine</string>
    <string name="hematology">Hematology</string>
    <string name="neurology">Neurology</string>
    <string name="ophthalmology">Ophthalmology</string>
    <string name="orthopedic_surgery">Orthopedic Surgery</string>
    <string name="pathology">Pathology</string>
    <string name="pediatrics">Pediatrics</string>
    <string name="physical_medicine_rehabilitation">Physical Medicine and Rehabilitation</string>
    <string name="psychiatry">Psychiatry</string>
    <string name="radiation_oncology">Radiation Oncology</string>
    <string name="respirology">Respirology</string>
    <string name="rheumatology">Rheumatology</string>
    <string name="urology">Urology</string>
    <string name="obstetrics_gynecology">Obstetrics and Gynecology</string>
</resources>