<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PatientSignUpActivity">

    <ImageView
        android:id="@+id/signUpIcon"
        android:layout_width="86dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person_circle" />

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="167dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/patient_sign_up"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpIcon" />

    <TextView
        android:id="@+id/screenDescription"
        android:layout_width="339dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_up_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenTitle" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/name"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenDescription" />

    <TextView
        android:id="@+id/genderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/gender"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

    <TextView
        android:id="@+id/dateOfBirthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/date_of_birth"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTitle" />

    <TextView
        android:id="@+id/usernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/username"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirthTitle" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/password"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTitle" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/name_format"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nameTitle"
        app:layout_constraintTop_toBottomOf="@+id/screenDescription" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="212dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/genderTitle"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textColor="@color/design_default_color_on_secondary"
			android:checked="true" />

        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/design_default_color_on_secondary" />

    </RadioGroup>

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/date_of_birth_format"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/dateOfBirthTitle"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/usernameTitle"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/passwordTitle"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>