<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DoctorSignUpActivity">

    <ImageView
        android:id="@+id/doctorSignUpIcon"
        android:layout_width="86dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person_circle" />

    <TextView
        android:id="@+id/doctorSignUpScreenTitle"
        android:layout_width="206dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/doctor_sign_up"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorSignUpIcon" />

    <TextView
        android:id="@+id/doctorSignUpScreenDescription"
        android:layout_width="339dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_up_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorSignUpScreenTitle" />

    <TextView
        android:id="@+id/doctorNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/name"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorSignUpScreenDescription" />

    <TextView
        android:id="@+id/doctorGenderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/gender"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorNameTitle" />

    <TextView
        android:id="@+id/specializationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/specialization"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorPasswordTitle" />

    <TextView
        android:id="@+id/doctorUsernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/username"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorGenderTitle" />

    <TextView
        android:id="@+id/doctorPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/password"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorUsernameTitle" />

    <EditText
        android:id="@+id/doctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/name_format"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/doctorNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/doctorSignUpScreenDescription" />

    <RadioGroup
        android:id="@+id/doctorRadioGroup"
        android:layout_width="212dp"
        android:layout_height="51dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/doctorGenderTitle"
        app:layout_constraintTop_toBottomOf="@+id/doctorName">

        <RadioButton
            android:id="@+id/doctorMaleButton"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/male"
            android:textColor="@color/design_default_color_on_secondary" />

        <RadioButton
            android:id="@+id/doctorFemaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/design_default_color_on_secondary" />

    </RadioGroup>

    <EditText
        android:id="@+id/doctorUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/doctorUsernameTitle"
        app:layout_constraintTop_toBottomOf="@+id/doctorRadioGroup" />

    <EditText
        android:id="@+id/doctorPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/doctorPasswordTitle"
        app:layout_constraintTop_toBottomOf="@+id/doctorUsername"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/doctorSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorSpecializationsChosen" />

    <TextView
        android:id="@+id/doctorSpecializationsChosen"
        android:layout_width="173dp"
        android:layout_height="107dp"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>