<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DeleteDoctorActivity">

    <TextView
        android:id="@+id/deleteTitle"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/delete_confirmation"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteDescription"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/delete_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteTitle" />

    <Button
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/delete_no"
        android:onClick="dismissDeleteAccountOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteDescription" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete_yes"
        android:onClick="deleteAccountOnClick"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dismiss" />

<!--    <Button-->
<!--        android:id="@+id/delete"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="128dp"-->
<!--        android:onClick="deleteAccountOnClick"-->
<!--        android:text="@string/delete_yes"-->
<!--        app:backgroundTint="#F44336"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/deleteDescription" />-->

</androidx.constraintlayout.widget.ConstraintLayout>